--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "@types/google-apps-script": "^1.0.37",
-    "@google/clasp": "^2.4.1"
+    "@google/clasp": "^2.4.1",
+    "@types/google-apps-script": "^1.0.37"
   },
   "scripts": {
     "test": "clasp run test\" && exit 1"
