--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "dependencies": {
     "@google/clasp": "^2.4.1",
-    "@types/google-apps-script": "^1.0.37"
+    "@types/google-apps-script": "^1.0.37",
+    "better-sqlite3": "^7.4.3"
   },
   "scripts": {
     "test": "clasp run test\" && exit 1"
