--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "typeRoots": ["../node_modules/@types", "types/*"],
-    "types": ["node", "better-sqlite3"],
+    "types": ["node"],
     "module": "CommonJS"
   },
   "exclude": [
